# ZWeb

./: README.md  config.py  config.yaml  image_service.py  main.py  pyproject.toml
static/: app.js  index.html  style.css
